ops/base-service/istio/example/strproces/istio/networking/http_abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: processer
spec:
  hosts:
  - processer
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 100
    match:
    - headers:
        user:
          exact: zhangsan
    route:
    - destination:
        host: processer
        subset: v2
  - route:
    - destination:
        host: processer
        subset: v2
