ops/base-service/istio/example/strproces/istio/networking/strprocesserui.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
spec:
  gateways:
  - str-gateway
  hosts:
  - ui
  http:
  - route:
    - destination:
        host: ui
        subset: v1
---
