ops/base-service/istio/example/strproces/istio/networking/virtualservice-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: processer
spec:
  hosts:
  - processer
  http:
  - route:
    - destination:
        host: processer
        subset: v2
---
